--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,44 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
+  }
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 100px;
+  height: 40px;
+  --g: radial-gradient(farthest-side, #0000 calc(95% - 3px), #000 calc(100% - 3px) 100%, #0000 107%) no-repeat;
+  background: var(--g), var(--g), var(--g);
+  background-size: 30px 30px;
+  animation: l9 1s infinite alternate;
+}
+
+@keyframes l9 {
+  0% {
+    background-position: 0 50%, 50% 50%, 100% 50%;
+  }
+
+  20% {
+    background-position: 0 0, 50% 50%, 100% 50%;
+  }
+
+  40% {
+    background-position: 0 100%, 50% 0, 100% 50%;
+  }
+
+  60% {
+    background-position: 0 50%, 50% 100%, 100% 0;
+  }
+
+  80% {
+    background-position: 0 50%, 50% 50%, 100% 100%;
+  }
+
+  100% {
+    background-position: 0 50%, 50% 50%, 100% 50%;
   }
 }
